@@ -2031,11 +2031,12 @@ Travel towards the left side of a ship.
 
 POSE=\
 Command : POSE\n\r\
-Usage   : POSE [STANDING DESCRIPTION] ... \n\r\
+Usage   : POSE (HERE) [STANDING DESCRIPTION] ... \n\r\
 Example : pose is standing here talking to himself.\n\r\
 Short(s): \n\r\
 Changes the message that is seen when a player is standing passively \
-in a room.  Use NOPOSE to turn off.
+in a room.  This will persist from room to room unless HERE argument is given. \
+Use NOPOSE to turn off.
 
 PRACTICE=\
 Command : PRACTICE\n\r\
