@@ -46,6 +46,7 @@
  44. New prayer: Divine Quest, mostly to use in blessings or curses.
  45. New spell: Mystic Task, mostly for use in scripts
  46. Achievements now supports LEVELUP, LEVELDOWN, CLASSLEVELUP, CLASSLEVELDOWN events.
+ 47. POSE command now supports HERE argument. 
 
 # Build 5.10.3 Release 01/01/2024
   *. CoffeeMud now officially requires jdk 1.8.  ATM, it will still compile in 1.6 tho.
